# hosted_tinker

./: .gitignore  CLAUDE.md  README.md  alembic.ini  launch.sh  pyproject.toml
.claude/commands/: launch-tinker-h100.md  setup-nccl.md  setup-new-node.md
benchmarks/: README.md  ablation_results.json  ablation_runner.py  bench_backends.py  bench_fsdp2_sweep.py  bench_gpu_throughput.py  bench_megatron_throughput.py  bench_micro_batch.py  bench_remove_padding_correctness.py  bench_vllm_inference.py  sweep_configs.py  vllm_bench_results.json
docs/: install_h100.md  nccl_h100_guide.md
hosted_tinker/: _log.py  _storage.py  _utils.py  api.py  backend.py  config.py  dashboard.py  db_models.py  engine.py  fsdp2_backend.py  fsdp2_worker.py  loss_fns.py  megatron_backend.py  megatron_tp_worker.py  megatron_worker.py  pytorch_backend.py  types.py  vllm_manager.py
hosted_tinker/alembic/: env.py
hosted_tinker/extra/: __init__.py  external_inference.py
tests/: conftest.py  run_tests.sh  test_checkpoints.py  test_e2e_training.py  test_forward_backward.py  test_openai_inference.py  test_optim_step.py  test_reference_comparison.py  test_sampling.py  test_service.py  test_split_gpu.py
